--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,6 +17,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"axios": "^1.1.2",
+		"dompurify": "^2.4.3",
 		"highlight.js": "^11.7.0",
 		"marked": "^4.2.4",
 		"next": "12.3.2",
@@ -52,6 +53,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/dompurify": "^2.4.0",
 		"@types/node": "^18.8.0",
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
 		"@typescript-eslint/parser": "^5.39.0",
